使用 Colaboratory 建立

--- a/naivebayes.ipynb
+++ b/naivebayes.ipynb
@@ -6,7 +6,7 @@
       "name": "naivebayes.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMAUtQwRtXwHy/8tmLU6wTm",
+      "authorship_tag": "ABX9TyMjuwSOO/AL1mBUFYN0p2C2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -244,12 +244,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 143
-        },
-        "id": "n_XHrdSZk2JM",
-        "outputId": "4ce8cd99-1dae-4254-8e5c-3e2fac83159e"
+        "id": "n_XHrdSZk2JM"
       },
       "source": [
         "from sklearn.metrics import confusion_matrix\n",
@@ -257,69 +252,23 @@
         "      index=[\"{}(正確)\".format(n) for n in u],\n",
         "      columns=[\"{}(預測)\".format(n) for n in u])"
       ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>李白(預測)</th>\n",
-              "      <th>杜甫(預測)</th>\n",
-              "      <th>白居易(預測)</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>李白(正確)</th>\n",
-              "      <td>8</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>杜甫(正確)</th>\n",
-              "      <td>1</td>\n",
-              "      <td>8</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>白居易(正確)</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>8</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "         李白(預測)  杜甫(預測)  白居易(預測)\n",
-              "李白(正確)        8       1        1\n",
-              "杜甫(正確)        1       8        1\n",
-              "白居易(正確)       1       1        8"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "snb7ROWr34Yp"
+      },
+      "source": [
+        "testp = input(\"來首詩:\")\n",
+        "testpcount = vec.transform([poemcut(testp)])\n",
+        "proba = clf.predict_proba(testpcount)[0]\n",
+        "for n, p in zip(u, proba):\n",
+        "    print(n, \"的機率是:\", p)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
