使用 Colaboratory 建立

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "titanic.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMOtWBQoui9PiWmBnYKV11H",
+      "authorship_tag": "ABX9TyNkEFgRNh6TDbN1FEiKgW6x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,8 +42,138 @@
         "urlretrieve(url, \"test.csv\")\n",
         "test = pd.read_csv(\"test.csv\", encoding=\"utf-8\")"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "88yO-zVI_uI8"
+      },
+      "source": [
+        "# concat\n",
+        "datas = pd.concat([train, test], axis=0, ignore_index=True)\n",
+        "datas = datas.drop([\"PassengerId\", \"Survived\"], axis=1)\n",
+        "datas"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dVbhNtKTBLF4"
+      },
+      "source": [
+        "# d1 = pd.DataFrame([\n",
+        "#          [1, 2],\n",
+        "#          [3, 4]\n",
+        "# ])\n",
+        "# d1 = pd.DataFrame([\n",
+        "#          [1, 2],\n",
+        "#          [3, 4]\n",
+        "# ])\n",
+        "# pd.concat([d1,d2],axis=0)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u-UMnh9ZB_-G",
+        "outputId": "7b9eaef1-6024-4aac-d26a-d1706315bb72"
+      },
+      "source": [
+        "# 篩選操作 Series/DataFrame[跟你的資料筆數依樣多的True/False]\n",
+        "s = datas.isna().sum()\n",
+        "s[s > 0].sort_values(ascending=False)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Cabin       1014\n",
+              "Age          263\n",
+              "Embarked       2\n",
+              "Fare           1\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 81
+        },
+        "id": "y8nG4Xc-DmJP",
+        "outputId": "afca32a5-e3c3-4817-c022-cf704ba76edb"
+      },
+      "source": [
+        "d1 = pd.DataFrame([\n",
+        "    [1, 2],\n",
+        "    [3, 4]\n",
+        "])\n",
+        "d1[[False, True]]"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>3</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   0  1\n",
+              "1  3  4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     }
   ]
 }
