使用 Colaboratory 建立

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "titanic.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNkEFgRNh6TDbN1FEiKgW6x",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPA2Cabjml9Qkbrs2SqadZ1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,11 +122,11 @@
         "outputId": "afca32a5-e3c3-4817-c022-cf704ba76edb"
       },
       "source": [
-        "d1 = pd.DataFrame([\n",
-        "    [1, 2],\n",
-        "    [3, 4]\n",
-        "])\n",
-        "d1[[False, True]]"
+        "# d1 = pd.DataFrame([\n",
+        "#     [1, 2],\n",
+        "#     [3, 4]\n",
+        "# ])\n",
+        "# d1[[False, True]]"
       ],
       "execution_count": 6,
       "outputs": [
@@ -172,6 +173,39 @@
           },
           "metadata": {},
           "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RklCGQ3BFLmr",
+        "outputId": "3ddac181-2dcc-47d6-ff17-757365d7d7b7"
+      },
+      "source": [
+        "most = datas[\"Embarked\"].value_counts().idxmax()\n",
+        "datas[\"Embarked\"] = datas[\"Embarked\"].fillna(most)\n",
+        "# 再看一下缺多少\n",
+        "s = datas.isna().sum()\n",
+        "s[s > 0].sort_values(ascending=False)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Cabin    1014\n",
+              "Age       263\n",
+              "Fare        1\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
         }
       ]
     }
