使用 Colaboratory 建立

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -6,7 +6,7 @@
       "name": "titanic.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPA2Cabjml9Qkbrs2SqadZ1",
+      "authorship_tag": "ABX9TyPMwWndiILVQ3CpHMrEvPo8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -186,7 +186,9 @@
         "outputId": "3ddac181-2dcc-47d6-ff17-757365d7d7b7"
       },
       "source": [
+        "#idxmax是用來找Embarked裡面最常出現的種類(s)是甚麼,設定到msot\n",
         "most = datas[\"Embarked\"].value_counts().idxmax()\n",
+        "#再把most(S)補到Embarked的空缺裡面\n",
         "datas[\"Embarked\"] = datas[\"Embarked\"].fillna(most)\n",
         "# 再看一下缺多少\n",
         "s = datas.isna().sum()\n",
@@ -208,6 +210,65 @@
           "execution_count": 7
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ewj-DoKcNDwx",
+        "outputId": "2c79cbb8-88e6-4658-b1fe-4073347c43b6"
+      },
+      "source": [
+        "#正規表示式\n",
+        "import re\n",
+        "def name(s):\n",
+        "    # .+任意一次以上 , \\s*空白零次以上 (.+) \\. .+\n",
+        "    # 比.好的 [a-zA-Z\\s\\(\\)']\n",
+        "    pattern = r\".+,\\s*(.+)\\..+\"\n",
+        "    # s = \"Braund, Mr. Owen Harris\"\n",
+        "    pat = re.compile(pattern)\n",
+        "    return pat.match(s).group(1)\n",
+        "datas[\"Name\"].apply(name)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0           Mr\n",
+              "1          Mrs\n",
+              "2         Miss\n",
+              "3          Mrs\n",
+              "4           Mr\n",
+              "         ...  \n",
+              "1304        Mr\n",
+              "1305      Dona\n",
+              "1306        Mr\n",
+              "1307        Mr\n",
+              "1308    Master\n",
+              "Name: Name, Length: 1309, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PLuVCxskNFG_"
+      },
+      "source": [
+        "def name(s):\n",
+        "    return s.split(\",\")[-1].split(\".\")[0].strip()\n",
+        "datas[\"Name\"] = datas[\"Name\"].apply(name)"
+      ],
+      "execution_count": 9,
+      "outputs": []
     }
   ]
 }
