使用 Colaboratory 建立

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -6,7 +6,7 @@
       "name": "titanic.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPMwWndiILVQ3CpHMrEvPo8",
+      "authorship_tag": "ABX9TyMlnQ/MrYN0dhDhiByapLyq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -214,11 +214,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ewj-DoKcNDwx",
-        "outputId": "2c79cbb8-88e6-4658-b1fe-4073347c43b6"
+        "id": "Ewj-DoKcNDwx"
       },
       "source": [
         "#正規表示式\n",
@@ -232,30 +228,8 @@
         "    return pat.match(s).group(1)\n",
         "datas[\"Name\"].apply(name)"
       ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0           Mr\n",
-              "1          Mrs\n",
-              "2         Miss\n",
-              "3          Mrs\n",
-              "4           Mr\n",
-              "         ...  \n",
-              "1304        Mr\n",
-              "1305      Dona\n",
-              "1306        Mr\n",
-              "1307        Mr\n",
-              "1308    Master\n",
-              "Name: Name, Length: 1309, dtype: object"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -269,6 +243,68 @@
       ],
       "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-VXEXAlcjr51"
+      },
+      "source": [
+        "def cabin(c):\n",
+        "  if pd.isna(c):\n",
+        "    return c\n",
+        "  else:\n",
+        "    return c[0]\n",
+        "datas[\"Cabin\"] = datas[\"Cabin\"].apply(cabin)"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lGpGmZeCksP_"
+      },
+      "source": [
+        "dic = datas[\"Ticket\"].value_counts()\n",
+        "datas[\"Ticket\"]=datas[\"Ticket\"].apply(lambda t:dic[t])"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X1s_gjMwlINP",
+        "outputId": "b56ac2fa-44a1-479a-aca6-5af47eb8e57b"
+      },
+      "source": [
+        "datas[\"Cabin\"].value_counts()"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "C    94\n",
+              "B    65\n",
+              "D    46\n",
+              "E    41\n",
+              "A    22\n",
+              "F    21\n",
+              "G     5\n",
+              "T     1\n",
+              "Name: Cabin, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     }
   ]
 }
